--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,7 +7,7 @@ import { SITE_DESCRIPTION, SITE_TITLE } from "../consts";
 const response = await fetch("https://randomuser.me/api/");
 const data = await response.json();
 
-const user = data[0];
+const user = data.results[0];
 ---
 
 <!doctype html>
